--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ body {
 
   text-decoration: none;
   font-weight: 500;
+  text-align: center;
 
   transition: background 0.3s ease-in, font 0.3s ease-in;
 
